Attempting to fix bug that causes buttons to be invisible on mobile devices

--- a/app/client/stylesheets/styles.css
+++ b/app/client/stylesheets/styles.css
@@ -164,6 +164,7 @@ body {
     place-content: center;
     min-width: calc(8rem * 3);
     width: 100%;
+    height: fit-content;
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
